Publicaciones logica terminada JERE

--- a/ifts6/src/app/components/publicaciones/publicaciones.component.html
+++ b/ifts6/src/app/components/publicaciones/publicaciones.component.html
@@ -3,8 +3,9 @@
 
         <h2>{{fila.titulo}}</h2>
         <div class="contenedor-img">
-            <img class="imagen-pub" src='data:image/png;base64, {{fila.imagen}}' alt="1">
+            <img class="imagen-pub" src='data:image/png;base64, {{fila.imagen}}'>
         </div>
+        
         <h3>
             <p>{{fila.descripcion}}</p>
         </h3>
