--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
         <div class="contenedor-botones">
             <a (click)="irPagina('')"><button class="btn btn-custom">Inicio</button></a>
             <a (click)="irPagina('institucional')"><button class="btn btn-custom">Institucional</button></a>
-            <a (click)="irPagina('carreras')"><button class="btn btn-custom">Carreras</button></a>
+            <a (click)="irPagina('carreras')"><button class="btn btn-custom">Carrera</button></a>
             <a (click)="irPagina('ingreso')"><button class="btn btn-custom">Ingreso</button></a>
             <a (click)="irPagina('extension')"><button class="btn btn-custom">Extensión terciaria</button></a>
             <a (click)="irPagina('convenios')"><button class="btn btn-custom">Convenios</button></a>
