--- a/ifts6/src/app/pages/carreras/carreras.component.html
+++ b/ifts6/src/app/pages/carreras/carreras.component.html
@@ -1,1 +1,70 @@
-<p> Carreras works!</p>
+
+
+<div class="contenedor-principal">
+
+        <div class="Generalidades">
+            <h2>Generalidades:</h2>
+            <p class="Generalidades">
+            
+                Título de egreso: TÉCNICO SUPERIOR EN COMERCIO INTERNACIONAL Y ADUANAS (no hay títulos intermedios).<br>
+                <br>
+               Nivel Superior de la Educación Técnico Profesional<br>
+                Carga horaria total de la Carrera : 2672 horas/cátedra equivalentes a 1781 hs reloj.<br>
+                <br>
+                Condiciones de ingreso: Nivel medio aprobado<br>
+                Cursada: De lunes a Viernes en el único horario de 18:30 a 22:30 Hs.<br>
+                Costo/Aranceles: Gratuito.<br>
+            </p>
+
+            <br>
+            <h2>Nuevo Plan de estudios</h2>
+                <p class="Generalidades">
+                    Mediante la Resolución 375/12 y Resolución 398/14 se ha oficializado el nuevo plan de estudios de nuestro IFTS6 que ya se implementó desde el año 2013 en el primer año de la Tecnicatura de Comercio Internacional y Aduanas (nueva denominación del Título que otorgará el establecimiento).<br>
+                
+                    El régimen de correlatividades del presente plan con la descripción de las asignaturas por ciclo<br>
+                
+                    La carga horaria correspondiente<br>
+                
+                    El texto oficial, conteniendo los programas de las materias<br>
+                </p>
+
+                <br>
+                <a
+                href="assets\Plan_de_estudios_TSComercioInternacionalyAduanas__V3.pdf"
+                title="Plan de estudios"
+                download="Plan_de_estudios_TSComercioInternacionalyAduanas__V3.pdf"
+                >Plan de estudios
+                </a>
+                <br>
+                <a
+                href="assets\res_ssgecp_375_12.pdf"
+                title="res_ssgecp_375_12"
+                download="res_ssgecp_375_12.pdf"
+                >res_ssgecp_375_12
+                </a>
+                <br>
+                <a
+                href="assets\Resolución_ssgeycp_398_14a.pdf"
+                title="Resolución_ssgeycp_398_14a"
+                download="Resolución_ssgeycp_398_14a.pdf"
+                >Resolución_ssgeycp_398_14a
+                </a>
+                <br>
+                <a
+                href="assets\res_ssgecp_375_12a2_carga_horaria.pdf"
+                title="Carga horaria"
+                download="res_ssgecp_375_12a2_carga_horaria.pdf"
+                >Carga horaria
+                </a>
+                <br>
+                <a
+                href="assets\375_anexo_contenido_programas.pdf"
+                title="Contenido programas"
+                download="375_anexo_contenido_programas.pdf"
+                >RESOLUCIÓN Nº 375 /SSGEYCP/12 Contenido programas
+                </a>
+
+
+    
+        </div>
+</div>
