--- a/ifts6/src/app/components/footer/footer.component.css
+++ b/ifts6/src/app/components/footer/footer.component.css
@@ -4,7 +4,7 @@ footer {
   background-color: #FFD300;
   color: #333;
   text-align: center;
-  padding: 10px 0
+  padding: 10px 0;
 }
 
 .footer-content {
