--- a/ifts6/src/app/pages/contacto/contacto.component.html
+++ b/ifts6/src/app/pages/contacto/contacto.component.html
@@ -1,6 +1,6 @@
 <div class="contenedor-principal">
 
-    <div class="container" >
+    <div class="container">
         <h1>Métodos de contacto ITFS6</h1>
 
         <div class="contact-section">
@@ -16,7 +16,63 @@
             <ul>
                 <li>8:00 a 22:00</li>
             </ul>
-            
+
+        </div>
+
+        <div class="consulta">
+
+            <button id="agregarConsulta" data-bs-toggle="modal" data-bs-target="#idModalAgregarConsulta"
+                class="btn btn-success">Agregar consulta</button>
+
+            <div class="modal fade" id="idModalAgregarConsulta" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Contacto</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body" id="modal-body">
+                            <!--Formulario-->
+                            <form id="formCargarConsulta" class="my-4">
+                                <div class="mb-3">
+                                    <label for="nombre" class="form-label">Nombre</label>
+                                    <input type="text" [(ngModel)]="nuevaConsulta.nombre" [ngModelOptions]="{standalone: true}" class="form-control" id="nombreInput" aria-describedby="nombre">
+
+                                </div>
+                                <div class="mb-3">
+                                    <label for="apellido" class="form-label">Apellido</label>
+                                    <input type="text" [(ngModel)]="nuevaConsulta.apellido" [ngModelOptions]="{standalone: true}" class="form-control" id="apellidoInput"
+                                        aria-describedby="apellido">
+
+                                </div>
+                                <div class="mb-3">
+                                    <label for="correo" class="form-label">Correo electronico</label>
+                                    <input type="text" [(ngModel)]="nuevaConsulta.correo" [ngModelOptions]="{standalone: true}" class="form-control" id="correoInput"
+                                        aria-describedby="correo electronico">
+
+                                </div>
+                                <div class="mb-3">
+                                    <label for="consulta" class="form-label">Consulta</label>
+                                    <input type="text" [(ngModel)]="nuevaConsulta.consulta" [ngModelOptions]="{standalone: true}" class="form-control" id="consultaInput"
+                                        aria-describedby="consulta">
+
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="text" id="guardarConsultaBtn" class="btn btn-success"
+                                data-bs-dismiss="modal" (click)="agregarConsulta()">Enviar</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+         -->
         </div>
 
         <div class="map-section">
