--- a/ifts6/src/app/components/header/header.component.html
+++ b/ifts6/src/app/components/header/header.component.html
@@ -12,7 +12,8 @@
                 <div class="titulo_web">Comercio Internacional y Aduanas</div>
                                 
                 <div class="col-m-6 col-s-6 text-right oculto">
-                    <h5 class="sub-brand"><img src="assets/bae.png" class="header-logo-derecha"></h5>
+                    <p class="links"><a href="https://buenosaires.gob.ar/educacion" target="_blank"><h5 class="sub-brand"><img src="assets/bae.png" class="header-logo-derecha" ></h5></a></p>
+                    
                 </div>
             </div>
         </div>
