--- a/ifts6/src/app/pages/contacto/contacto.component.html
+++ b/ifts6/src/app/pages/contacto/contacto.component.html
@@ -1,13 +1,13 @@
 <div class="contenedor-principal">
 
     <div class="container">
-        <h1>Métodos de contacto ITFS6</h1>
+        <h1>Métodos de contacto IFTS 6</h1>
 
         <div class="contact-section">
             <h2>Contactos telefónicos:</h2>
             <ul>
 
-                <li>Información IFTS6 | info@ifts6.edu.ar</li>
+                <li>Información IFTS 6 | info@ifts6.edu.ar</li>
             </ul>
         </div>
 
