--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://buenosaires.gob.ar/educacion" target="_blank"><img src="/assets/bac.png" class="footer-logo-derecha"></a>
+        <a href="https://buenosaires.gob.ar/inicio/" target="_blank"><img src="/assets/bac.png" class="footer-logo-derecha"></a>
       </p>
     </div>
 
