--- a/ifts6/src/app/pages/carreras/carreras.component.html
+++ b/ifts6/src/app/pages/carreras/carreras.component.html
@@ -1,5 +1,4 @@
 
-
 <div class="contenedor-principal">
 
         <div class="Generalidades">
@@ -20,7 +19,7 @@
             <h2>Nuevo Plan de estudios</h2>
                 <p class="Generalidades">
                     Mediante la Resolución 375/12 y Resolución 398/14 se ha oficializado el nuevo plan de estudios de nuestro IFTS6 que ya se implementó desde el año 2013 en el primer año de la Tecnicatura de Comercio Internacional y Aduanas (nueva denominación del Título que otorgará el establecimiento).<br>
-                
+                    
                     El régimen de correlatividades del presente plan con la descripción de las asignaturas por ciclo<br>
                 
                     La carga horaria correspondiente<br>
@@ -29,42 +28,42 @@
                 </p>
 
                 <br>
-                <a
-                href="assets\Plan_de_estudios_TSComercioInternacionalyAduanas__V3.pdf"
-                title="Plan de estudios"
-                download="Plan_de_estudios_TSComercioInternacionalyAduanas__V3.pdf"
-                >Plan de estudios
-                </a>
-                <br>
-                <a
-                href="assets\res_ssgecp_375_12.pdf"
-                title="res_ssgecp_375_12"
-                download="res_ssgecp_375_12.pdf"
-                >res_ssgecp_375_12
-                </a>
-                <br>
-                <a
-                href="assets\Resolución_ssgeycp_398_14a.pdf"
-                title="Resolución_ssgeycp_398_14a"
-                download="Resolución_ssgeycp_398_14a.pdf"
-                >Resolución_ssgeycp_398_14a
-                </a>
-                <br>
-                <a
-                href="assets\res_ssgecp_375_12a2_carga_horaria.pdf"
-                title="Carga horaria"
-                download="res_ssgecp_375_12a2_carga_horaria.pdf"
-                >Carga horaria
-                </a>
-                <br>
-                <a
-                href="assets\375_anexo_contenido_programas.pdf"
-                title="Contenido programas"
-                download="375_anexo_contenido_programas.pdf"
-                >RESOLUCIÓN Nº 375 /SSGEYCP/12 Contenido programas
-                </a>
-
-
+                <div class="pdfs">
+                    <a
+                    href="assets\Plan_de_estudios_TSComercioInternacionalyAduanas__V3.pdf"
+                    title="Plan de estudios"
+                    download="Plan_de_estudios_TSComercioInternacionalyAduanas__V3.pdf"
+                    >Plan de estudios
+                    </a>
+                    <br>
+                    <a
+                    href="assets\res_ssgecp_375_12.pdf"
+                    title="res_ssgecp_375_12"
+                    download="res_ssgecp_375_12.pdf"
+                    >res_ssgecp_375_12
+                    </a>
+                    <br>
+                    <a
+                    href="assets\Resolución_ssgeycp_398_14a.pdf"
+                    title="Resolución_ssgeycp_398_14a"
+                    download="Resolución_ssgeycp_398_14a.pdf"
+                    >Resolución_ssgeycp_398_14a
+                    </a>
+                    <br>
+                    <a
+                    href="assets\res_ssgecp_375_12a2_carga_horaria.pdf"
+                    title="Carga horaria"
+                    download="res_ssgecp_375_12a2_carga_horaria.pdf"
+                    >Carga horaria
+                    </a>
+                    <br>
+                    <a
+                    href="assets\375_anexo_contenido_programas.pdf"
+                    title="Contenido programas"
+                    download="375_anexo_contenido_programas.pdf"
+                    >RESOLUCIÓN Nº 375 /SSGEYCP/12 Contenido programas
+                    </a>
+                </div>                
     
         </div>
 </div>
