--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -1,36 +1,40 @@
 <footer>
 
   <div class="footer-content">
-    
-      <div class="footer-left ">
-        <p class="links">
-     <a href="https://www.facebook.com/CEIFTS6" target="_blank">
-        <img class="iconst" src="assets/f.png" alt="Facebook">
-      </a>
-      <a href="https://www.instagram.com/cde.ifts6/" target="_blank">
-        <img class="iconst" src="assets/ig.png" alt="Instagram">
-      </a>
-      <a href="https://www.whatsapp.com" target="_blank">
-        <img class="iconst" src="assets/w.png" alt="Whatsapp">
-      </a>
-      <a href="https://www.youtube.com/@ifts6459" target="_blank">
-        <img class="iconst" src="assets/y.png" alt="Youtube" > 
-    </a>
-    
-        </p>
-      </div>
 
-    
+    <div class="footer-left ">
+      <p class="links">
+        <a href="https://www.facebook.com/CEIFTS6" target="_blank">
+          <img class="iconst" src="assets/f.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/cde.ifts6/" target="_blank">
+          <img class="iconst" src="assets/ig.png" alt="Instagram">
+        </a>
+        <a href="https://www.whatsapp.com" target="_blank">
+          <img class="iconst" src="assets/w.png" alt="Whatsapp">
+        </a>
+        <a href="https://www.youtube.com/@ifts6459" target="_blank">
+          <img class="iconst" src="assets/y.png" alt="Youtube">
+        </a>
+        <a href="https://guarani-autogestionagencia.bue.edu.ar/acceso" target="_blank">
+          <img class="iconst" src="../../../assets/Siu.jpg" alt="Siu">
+        </a>
+
+      </p>
+    </div>
+
+
     <div class="footer-center">
       <p>Instituto de Formación Técnica Superior Nº6</p>
       <b> Técnico Superior en Comercio Internacional y Aduanas</b>
-       <p>
+      <p>
         Avenida Paseo Colón 650,<br>
         Monserrat,C.A.B.A </p>
     </div>
     <div class="footer-right">
       <p class="links">
-        <a href="https://buenosaires.gob.ar/inicio/" target="_blank"><img src="/assets/bac.png" class="footer-logo-derecha"></a>
+        <a href="https://buenosaires.gob.ar/inicio/" target="_blank"><img src="/assets/bac.png"
+            class="footer-logo-derecha"></a>
       </p>
     </div>
 
