--- a/ifts6/src/app/pages/admin/admin.component.css
+++ b/ifts6/src/app/pages/admin/admin.component.css
@@ -1,54 +1,61 @@
 @import "primeicons/primeicons.css";
 
- 
+
 /* Estilos para el contenedor principal del formulario de inicio de sesión */
 .login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh; 
-  }
-  
-  /* Estilos para el cuadro de inicio de sesión */
-  .login-cuadrado {
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding: 30px; /* Aumentamos el espacio interior para hacerlo más grande */
-    width: 350px; /* Aumentamos el ancho */
-  }
-  
-  /* Estilos para las etiquetas de texto y campos de entrada */
-  .login-texto {
-    display: block;
-    margin-bottom: 15px; /* Incrementamos el margen inferior */
-    font-weight: bold;
-  }
-  
-  .login-input {
-    width: 100%;
-    padding: 12px; /* Aumentamos el padding para hacerlo más grande */
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 18px; /* Incrementamos el tamaño de fuente */
-  }
-  
-  /* Estilos para el botón de ingreso */
-  .login-boton {
-    background-color: #00b3e3;
-    color: #fff;
-    padding: 12px 25px; /* Aumentamos el padding del botón */
-    border: none;
-    border-radius: 4px;
-    font-size: 20px; /* Incrementamos el tamaño de fuente del botón */
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .login-boton:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 54.3vh;
+}
+
+/* Estilos para el cuadro de inicio de sesión */
+.login-cuadrado {
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 30px;
+  /* Aumentamos el espacio interior para hacerlo más grande */
+  width: 350px;
+  /* Aumentamos el ancho */
+}
+
+/* Estilos para las etiquetas de texto y campos de entrada */
+.login-texto {
+  display: block;
+  margin-bottom: 15px;
+  /* Incrementamos el margen inferior */
+  font-weight: bold;
+}
+
+.login-input {
+  width: 100%;
+  padding: 12px;
+  /* Aumentamos el padding para hacerlo más grande */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 18px;
+  /* Incrementamos el tamaño de fuente */
+}
+
+/* Estilos para el botón de ingreso */
+.login-boton {
+  background-color: #00b3e3;
+  color: #fff;
+  padding: 12px 25px;
+  /* Aumentamos el padding del botón */
+  border: none;
+  border-radius: 4px;
+  font-size: 20px;
+  /* Incrementamos el tamaño de fuente del botón */
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.login-boton:hover {
+  background-color: #0056b3;
+}
+
 
 .header {
   position: relative;
@@ -56,152 +63,179 @@
   height: 210px;
   background-color: #333;
   text-align: center;
-  display: flex; /* Agrega display: flex para alinear los elementos en el centro verticalmente */
-  justify-content: center; /* Centra horizontalmente los elementos */
-  align-items: center; /* Centra verticalmente los elementos */
+  display: flex;
+  /* Agrega display: flex para alinear los elementos en el centro verticalmente */
+  justify-content: center;
+  /* Centra horizontalmente los elementos */
+  align-items: center;
+  /* Centra verticalmente los elementos */
 }
 
 .admin {
-    height: 52.3vh;
-    margin: 0 auto;
+  height: 53.2vh;
+  margin: 0 auto;
 }
 
 .contenedor-botones {
-    text-align: center;
-    /* Centra los botones horizontalmente */
-    background-color:#007bff;
+  text-align: center;
+  /* Centra los botones horizontalmente */
+  background-color: #007bff;
 }
 
 .btn {
   margin: 5px;
   border-radius: 10px;
   /* Radio de las esquinas (ajusta según tus preferencias) */
-  background-color: #e5e5e5; /* Color de fondo del botón */
-  color: #1d1c1a; /* Color del texto en el botón */
-  padding: 10px 20px; /* Ajusta el espaciado interno del botón */
+  background-color: #e5e5e5;
+  /* Color de fondo del botón */
+  color: #1d1c1a;
+  /* Color del texto en el botón */
+  padding: 10px 20px;
+  /* Ajusta el espaciado interno del botón */
   text-align: center;
-  font-size: 16px; /* Tamaño del texto */
+  font-size: 16px;
+  /* Tamaño del texto */
   cursor: pointer;
-  border: none; /* Elimina el borde del botón */
-  transition: background-color 0.3s; /* Efecto de cambio de color al pasar el cursor */
+  border: none;
+  /* Elimina el borde del botón */
+  transition: background-color 0.3s;
+  /* Efecto de cambio de color al pasar el cursor */
 }
 
 .btn:hover {
-  background-color: #87898b; /* Cambio de color al pasar el cursor sobre el botón */
+  background-color: #87898b;
+  /* Cambio de color al pasar el cursor sobre el botón */
 }
 
 /*------------ADMIN PUBLICACIONES-----------------------*/
 
-.admin-publicaciones{
-    display: grid;
-    grid-template-columns: 75% 25%;
-    max-height: 25vh;
+.admin-publicaciones {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  max-height: 25vh;
 }
 
-.admin-publicaciones-textos{
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    column-gap: 1vh;
-    margin-left: 0.5rem;
-    margin-top: 0.5rem;
+.admin-publicaciones-textos {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  column-gap: 1vh;
+  margin-left: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 
 
 .admin-publicaciones-textarea {
-    max-height: 5vh;
-    resize: none;
+  max-height: 5vh;
+  resize: none;
 }
 
 .admin-publicaciones-descripcion {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #ffffff;
-    border: 3px solid  #FFD300;
-    z-index: 9;
-    flex-direction: column;
-    padding: 10px;
-    box-shadow: 0 0 0 99999px rgba(0, 0, 0, .5);
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: 3px solid #FFD300;
+  z-index: 9;
+  flex-direction: column;
+  padding: 10px;
+  box-shadow: 0 0 0 99999px rgba(0, 0, 0, .5);
 }
 
-.admin-publicaciones-descripcion-button{
-    width: 3vh;
-    position: fixed;
-    right: 0;
-    top: 0;
-    background-color: red;
+.admin-publicaciones-descripcion-button {
+  width: 3vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  background-color: red;
 }
 
-.admin-publicaciones-descripcion-label{
-    margin: 1vh;
+.admin-publicaciones-descripcion-label {
+  margin: 1vh;
 }
 
 
 
-.admin-publicaciones-botones{
-    display: flex;
-    align-items: end;
+.admin-publicaciones-botones {
+  display: flex;
+  align-items: end;
 }
-.admin-sectores{
+
+.admin-sectores {
   display: grid;
   grid-template-columns: 8% 25%;
   max-height: 25vh;
 
 }
+
 .admin-publicaciones-button {
   width: 20vh;
   height: 7vh;
-  padding: 1vh 2vh; /* Añadimos más espacio de relleno horizontal para hacer que el botón sea más atractivo */
+  padding: 1vh 2vh;
+  /* Añadimos más espacio de relleno horizontal para hacer que el botón sea más atractivo */
   margin: 0 auto;
-  background-color: #007bff; /* Color de fondo del botón */
-  color: #fff; /* Color del texto en el botón */
-  border: none; /* Eliminamos el borde predeterminado */
-  border-radius: 5px; /* Añadimos bordes redondeados */
+  background-color: #007bff;
+  /* Color de fondo del botón */
+  color: #fff;
+  /* Color del texto en el botón */
+  border: none;
+  /* Eliminamos el borde predeterminado */
+  border-radius: 5px;
+  /* Añadimos bordes redondeados */
   cursor: pointer;
   font-size: 15px;
   transition: background-color 0.3s;
 }
 
 .admin-publicaciones-button:hover {
-  background-color: #0056b3; /* Cambio de color al pasar el cursor sobre el botón */
+  background-color: #0056b3;
+  /* Cambio de color al pasar el cursor sobre el botón */
 }
 
 .admin-publicaciones-buttonusu {
-  width: 10vh; /* Reduce el ancho del botón */
-  height: 4vh; /* Reduce la altura del botón */
+  width: 10vh;
+  /* Reduce el ancho del botón */
+  height: 4vh;
+  /* Reduce la altura del botón */
   padding: 1vh 1vh;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 12px; /* Reduce el tamaño de fuente */
+  font-size: 12px;
+  /* Reduce el tamaño de fuente */
   transition: background-color 0.3s;
-  margin-left: 10px; /* Ajusta la distancia desde el último input de "Rol" */
-  text-align: center; 
+  margin-left: 10px;
+  /* Ajusta la distancia desde el último input de "Rol" */
+  text-align: center;
 }
 
 .admin-publicaciones-buttonusu:hover {
-  background-color: #0056b3; /* Cambio de color al pasar el cursor sobre el botón */
+  background-color: #0056b3;
+  /* Cambio de color al pasar el cursor sobre el botón */
 }
 
 .admin-publicaciones-buttonSec {
-  width: 10vh; /* Deja que el ancho se ajuste automáticamente al contenido */
-  height: 10vh; /* Reduce la altura del botón */
+  width: 10vh;
+  /* Deja que el ancho se ajuste automáticamente al contenido */
+  height: 10vh;
+  /* Reduce la altura del botón */
   padding: 1vh 2vh;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 12px; /* Reduce el tamaño de fuente */
+  font-size: 12px;
+  /* Reduce el tamaño de fuente */
   transition: background-color 0.3s;
-  margin-left: 95px; /* Ajusta la distancia desde el input de "Sector" */
+  margin-left: 95px;
+  /* Ajusta la distancia desde el input de "Sector" */
 }
 
 
@@ -216,21 +250,27 @@
 
 .botones-container {
   display: flex;
-  justify-content: center; /* Centra horizontalmente los botones */
-  align-items: center; /* Centra verticalmente los botones */
-  margin: 10px; /* Agrega un margen entre los botones */
+  justify-content: center;
+  /* Centra horizontalmente los botones */
+  align-items: center;
+  /* Centra verticalmente los botones */
+  margin: 10px;
+  /* Agrega un margen entre los botones */
 }
 
 .botones-container a {
-  text-decoration: none; /* Elimina el subrayado de los enlaces */
+  text-decoration: none;
+  /* Elimina el subrayado de los enlaces */
 }
 
 .botones-container .btn {
-  margin: 5px; /* Ajusta el margen entre los botones */
+  margin: 5px;
+  /* Ajusta el margen entre los botones */
 
-  
+
 }
-  /**/
+
+/**/
 
 /* Agrega estilos para el paginador */
 .paginador {
