--- a/ifts6/src/app/components/footer/footer.component.html
+++ b/ifts6/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <footer>
 
   <div class="footer-content">
-
+    <a href="https://guarani-autogestionagencia.bue.edu.ar/acceso" target="_blank">
+      <img class="iconsst" src="../../../assets/siiu.jpg" alt="Siu">
+    </a>
     <div class="footer-left ">
       <p class="links">
         <a href="https://www.facebook.com/CEIFTS6" target="_blank">
@@ -16,11 +18,9 @@
         <a href="https://www.youtube.com/@ifts6459" target="_blank">
           <img class="iconst" src="assets/y.png" alt="Youtube">
         </a>
-        <a href="https://guarani-autogestionagencia.bue.edu.ar/acceso" target="_blank">
-          <img class="iconst" src="../../../assets/Siu.jpg" alt="Siu">
-        </a>
-
-      </p>
+       
+</p>
+     
     </div>
 
 
