--- a/ifts6/src/app/pages/carreras/carreras.component.css
+++ b/ifts6/src/app/pages/carreras/carreras.component.css
@@ -1,52 +1,44 @@
+/* Estilos generales para todo el documento */
+body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+/* Estilos para el contenedor principal */
 .contenedor-principal {
-    display:flex;
-    justify-content: center;
+    width: 80%;
     margin: 0 auto;
-    height: 54.3vh;
-    width: 65%;
 }
 
-p{
-    text-align: left;
-    font-size: large;
+/* Estilos para la sección de Generalidades */
+.Generalidades {
+    margin-bottom: 20px;
 }
 
-.pdfs{
-    display: flex;
-    padding-top: 1rem;
-    gap: 1rem;
+.Generalidades h2 {
+    color: #333;
 }
 
-a{
-    font-size: large;
-    padding: 10px;
-    background-color: #333;
-    color: white;
-    border-radius: 5px;
+.Generalidades p.Generalidades {
+    line-height: 1.6;
+    color: #666;
+}
+
+/* Estilos para la sección de Nuevo Plan de estudios */
+.Generalidades h2,
+.pdfs h2 {
+    color: #333;
+    margin-top: 20px;
+}
+
+.pdfs a {
+    display: block;
+    margin-bottom: 10px;
+    color: #007BFF;
     text-decoration: none;
-    text-align: center;
-    box-shadow: 5px 5px black;
 }
 
-@media (max-height : 770px) {
-    .contenedor-principal{
-        border: 1px solid red;
-        height: 60vh;
-    }
-
-    p{
-        text-align: left;
-        font-size: medium;
-    }
-
-    a{
-        font-size: medium;
-        padding: 5px;
-        background-color: #333;
-        color: white;
-        border-radius: 5px;
-        text-decoration: none;
-        text-align: center;
-        box-shadow: 5px 5px black;
-    }
+.pdfs a:hover {
+    text-decoration: underline;
 }
