--- a/ifts6/src/app/pages/inicio/inicio.component.html
+++ b/ifts6/src/app/pages/inicio/inicio.component.html
@@ -1,3 +1,3 @@
 <button (click)="verTodas()" *ngIf="cant == 6"> Ver todas las publicaciones </button>
 
-<app-publicaciones [criterio]="criterioPag" [cantidad]="cant"></app-publicaciones>
+<app-publicaciones [criterio]="criterioPag" [cantidad]="cant" [todas] = "todas"></app-publicaciones>
