--- a/ifts6/src/app/components/publicaciones/publicaciones.component.css
+++ b/ifts6/src/app/components/publicaciones/publicaciones.component.css
@@ -1,3 +1,17 @@
+.filtro-botones{
+  display: flex;
+  justify-content: end;
+  margin : 1rem;
+  gap: 0.5rem;
+}
+
+.filtro-botones button{
+    padding: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 3px;
+}
+
 /* Estilo para el contenedor de publicaciones */
 .contenedor-pub {
     min-height: 54.3vh;
@@ -6,6 +20,7 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 20px;
+    margin: 1rem;
   }
   
   /* Estilo para cada publicación individual */
@@ -47,9 +62,7 @@
    
   }
 
-  .descripcion{
-    
-  }
+  
   
   /* Estilo para las etiquetas de información */
   .pub label {
