--- a/ifts6/src/app/pages/detalle/detalle.component.html
+++ b/ifts6/src/app/pages/detalle/detalle.component.html
@@ -8,7 +8,7 @@
     <div class="contenedor-img">
         <img class="imagen-pub" src='data:image/png;base64, {{publicacion.imagen}}' alt="1">
     </div>
-    <h3>
+    <h3 class="descri">
         <p>{{publicacion.descripcion}}</p>
     </h3>
     <br>
