--- a/ifts6/src/app/pages/detalle/detalle.component.css
+++ b/ifts6/src/app/pages/detalle/detalle.component.css
@@ -9,16 +9,25 @@ body {
   
   .contenedor-pub {
     text-align: center; /* Centra el texto dentro del contenedor */
-    max-width: 600px; /* Establece un ancho máximo para la publicación */
     margin: 0 auto; /* Centra el contenedor en el eje horizontal */
+    display:flex;
+    align-self: center;
+    flex-direction: column;
   }
   
   .contenedor-img {
     margin-top: 10px; /* Ajusta el margen superior de la imagen si es necesario */
+    max-width: 600px; /* Establece un ancho máximo para la publicación */
+    display:flex;
+    align-self: center;
   }
   
   .imagen-pub {
     max-width: 100%; /* Ajusta el tamaño máximo de la imagen */
     height: auto; /* Permite que la altura se ajuste automáticamente según el ancho */
   }
-  
+  .descri p{
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
+  }
